vpc/nat-gateway/src/cloudformation/stack.template
AWSTemplateFormatVersion: "2010-09-09"
Description: Demo to create a NAT Gateway and allow two EC2 instances in private subnets to access the internet.
     
Parameters:
  AwsDemoKeyPairName:
    Type: String
    Description: The name of the key pair used to log into the EC2 instance. 

Resources:
        
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 192.168.0.0/16
      InstanceTenancy: default

      # DNS settings for RDS Endpoint name resolution
      EnableDnsSupport: true         
      EnableDnsHostnames: true

  InternetGateway:
    Type: AWS::EC2::InternetGateway

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway  
  
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 192.168.1.0/24
      MapPublicIpOnLaunch: true
      AvailabilityZone: us-east-1a

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 192.168.2.0/24
      MapPublicIpOnLaunch: false
      AvailabilityZone: us-east-1b

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 192.168.3.0/24
      MapPublicIpOnLaunch: false
      AvailabilityZone: us-east-1a

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 192.168.4.0/24
      MapPublicIpOnLaunch: false
      AvailabilityZone: us-east-1b
    
      
  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      
  InternetRoute:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
      RouteTableId: !Ref RouteTable      

  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTable
      SubnetId: !Ref PublicSubnet1 

  PublicSubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTable
      SubnetId: !Ref PublicSubnet2

  NAT:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - EIP
          - AllocationId
      SubnetId:
        Ref: PublicSubnet1

  EIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc


  PrivateSubnetRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      
  NatInternetRoute:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: NAT          
      RouteTableId: !Ref PrivateSubnetRouteTable      

  PrivateSubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateSubnetRouteTable
      SubnetId: !Ref PrivateSubnet1 

  PrivateSubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateSubnetRouteTable
      SubnetId: !Ref PrivateSubnet2 

  #
  # EC2 instances and security groups
  #
  
  BastionEC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: "Bastion Internet access with SSH in"
      GroupDescription: "SSH traffic in, all traffic out."
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: "-1"
          CidrIp: 0.0.0.0/0 

  BastionEC2Node:
    Type: AWS::EC2::Instance
    Properties: 
      ImageId: "ami-0df51bbdb09841968"
      KeyName: !Ref AwsDemoKeyPairName
      InstanceType: "t2.micro"
      NetworkInterfaces: 
      - AssociatePublicIpAddress: true
        DeviceIndex: "0"
        GroupSet: 
          - Ref: "BastionEC2SecurityGroup"
        SubnetId: 
          Ref: "PublicSubnet1"
      UserData:
        Fn::Base64: |
          #!/bin/bash -xe
          yum install openssh-clients -y
          
  PrivateEC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: "Private Ec2 node Internet access with SSH in"
      GroupDescription: "SSH traffic in, all traffic out."
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 192.168.0.0/16
      SecurityGroupEgress:
        - IpProtocol: "-1"
          CidrIp: 0.0.0.0/0 

  PrivateEC2Node1:
    Type: AWS::EC2::Instance
    Properties: 
      ImageId: "ami-0df51bbdb09841968"
      KeyName: !Ref AwsDemoKeyPairName
      InstanceType: "t2.micro"
      NetworkInterfaces: 
      - DeviceIndex: "0"
        GroupSet: 
          - Ref: "PrivateEC2SecurityGroup"
        SubnetId: 
          Ref: "PrivateSubnet1"

  PrivateEC2Node2:
    Type: AWS::EC2::Instance
    Properties: 
      ImageId: "ami-0df51bbdb09841968"
      KeyName: !Ref AwsDemoKeyPairName
      InstanceType: "t2.micro"
      NetworkInterfaces: 
      - DeviceIndex: "0"
        GroupSet: 
          - Ref: "PrivateEC2SecurityGroup"
        SubnetId: 
          Ref: "PrivateSubnet2"
